Bug 159696 - Small capitals with 'Underlining' does not react to the flag for 'Single words'
Summary: Small capitals with 'Underlining' does not react to the flag for 'Single words'
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Font-Effects
  Show dependency treegraph
 
Reported: 2024-02-12 15:57 UTC by Ansgar E.
Modified: 2024-03-05 14:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test ODP (16.68 KB, application/vnd.oasis.opendocument.presentation)
2024-02-20 05:19 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ansgar E. 2024-02-12 15:57:22 UTC
Description:
After setting 'Small caps' additionally with 'Underline', the function 'Single words' does not work. The spaces are still underlined. Everything still looks correct in the preview. - In addition, 2 types of underlining type simple waves (single + bold) end a little earlier. Not under the end of the last word.

Steps to Reproduce:
1. Impress -> Font effects
2. Small caps + underline <something> + flag 'Single words'
3. Preview OK - after activation by 'OK' no more
Underlined waves (single or bold) also end slightly earlier than the corresponding text

Actual Results:
Optical problem

Expected Results:
'Small caps' should react to 'Underline' - not only in preview


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 1 V Stuart Foote 2024-02-12 17:51:27 UTC
Confirmed with STR

The 'individual words' is honored in the Character... dialog 'Font affects' preview, but not on the slide canvas.  Small Caps are otherwise correct (bug 98367).

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 17fc445938dedb05125a6d6a5b4ce7f34ea95f59
CPU threads: 8; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 2 stragu 2024-02-20 05:18:43 UTC
Reproduced in:

Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Caolán, I checked that it indeed started at ffaed5cae29d6bb14faf870cb935ccd3c35d4a3c.
Can you please have a look?
Comment 3 stragu 2024-02-20 05:19:13 UTC
Created attachment 192649 [details]
test ODP
Comment 4 Caolán McNamara 2024-03-03 14:56:40 UTC
https://gerrit.libreoffice.org/c/core/+/164275
Comment 5 Commit Notification 2024-03-03 16:43:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5dab4eb854609d5d84bb0bfa918f0a5bf0459b53

Resolves: tdf#159696 Small capitals with 'Individual words' underlining

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2024-03-03 16:44:07 UTC
done in trunk, backport to 24.02 in gerrit
Comment 7 Commit Notification 2024-03-03 19:36:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d768e6e376b7828e3a306a97b789a76f85f9f3b9

Resolves: tdf#159696 Small capitals with 'Individual words' underlining

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 stragu 2024-03-05 14:16:10 UTC
Thanks Caolán, fix verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9574a62add8e4901405e12117e75c86c2d2c2f21
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded